2006-04-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: Remove LINGUAS and depend on intltool 0.34.90
	for supporting the po/LINGUAS file (#337941).

2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

2006-04-01  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* README:
	* configure.in: post stable release bump to 2.15.0

2006-04-01  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: Drop the check for popt, as we use GOption
	for all the modules in gnome-utils (Closes bug #336360,
	patch by Tommi Vainikainen).

	* .cvsignore:
	* m4/.cvsignore: Update CVS ignore files.

2006-04-01  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in:
	* README: Make gnome-utils depend on libpanel-applet
	version >= 2.13.4, for panel_applet_set_background_widget()
	used in the gnome-dictionary applet (Closes bug #336546,
	patch by Marco Cabizza).

2006-03-25  Tommi Vainikainen  <thv@iki.fi>

	* configure.in (ALL_LINGUAS): Added Dzongkha (dz).

2006-03-14  Vladimer Sichinava  <alinux@siena.linux.it>

	* configure.in: Added "ka" Georgian to ALL_LINGUAS

2006-02-18  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in, README, NEWS: re-sync from gnome-2-14.

2006-02-18  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in:
	* README: require newer libgnome and libgnomeui for the GOption
	context support in GnomeProgram.

2006-01-30  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: post-release bump to 2.13.92

2006-01-30  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: release 2.13.91

2006-01-30  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: fix a glitch that did not include the translations
	database in the dist package.

2006-01-30  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: post-release bump to 2.13.91

2006-01-30  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* NEWS:
	* README:
	* configure.in: release 2.13.90
