@@ -12,6 +12,14 @@ GNOME Screenshot
 	Jonathan Blandford
 	Email: jrb@redhat.com
 
+Baobab
+	Fabio Marzocca
+	Email: thesaltydog@gmail.com
+	Paolo Borelli
+	Email: pborelli@katamail.com
+	Benoît Dejean
+	Email: benoit@placenet.org
+
 Documentation
 	John Fleck 
 	Email: jfleck@inkstain.net
