@@ -1,5 +1,17 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
+baobab/data/baobab.desktop.in.in
+baobab/data/baobab.glade
+baobab/data/baobab.schemas.in
+baobab/src/baobab.c
+baobab/src/baobab-graphwin.c
+baobab/src/baobab-prefs.c
+baobab/src/baobab-remote-connect-dialog.c
+baobab/src/baobab-scan.c
+baobab/src/baobab-tree-map.c
+baobab/src/baobab-treeview.c
+baobab/src/baobab-utils.c
+baobab/src/callbacks.c
 gfloppy/gfloppy.desktop.in
 gfloppy/gfloppy.schemas.in
 gfloppy/src/badblocks.c
@@ -14,7 +26,6 @@ gnome-dictionary/data/GNOME_DictionaryApplet.xml
 gnome-dictionary/data/gnome-dictionary.desktop.in
 gnome-dictionary/data/gnome-dictionary.schemas.in
 gnome-dictionary/data/gnome-dictionary-preferences.glade
-gnome-dictionary/data/french.desktop.in
 gnome-dictionary/data/spanish.desktop.in
 gnome-dictionary/libgdict/gdict-client-context.c
 gnome-dictionary/libgdict/gdict-context.c
