@@ -1,3 +1,14 @@
+2006-04-23  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* Makefile.am:
+	* configure.in: Add baobab to the build; baobab is a disk usage
+	analyser tool, written by Fabio Marzocca.
+
+	* MAINTAINERS: Update.
+
+	* po/POTFILES.in: Add baobab's files to the list of translatable
+	files; remove the broken french.desktop.in dictionary source.
+
 2006-04-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* configure.in: Remove LINGUAS and depend on intltool 0.34.90
